# hoin

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: ci.yml  release-app-reusable.yml  release-model-reusable.yml  release.yml
apps/cli/: Cargo.toml  README.md  build.rs
apps/cli/src/: categorize.rs  cli.rs  embedded_model.rs  help.rs  main.rs  model.rs  model_package.rs
apps/cli/src/categorize/: discovery.rs  fs_ops.rs  operations.rs  types.rs
apps/web/: .gitignore  README.md  biome.json  package.json  tsconfig.json
apps/web/public/: index.html  style.css
apps/web/src/: allowed-paths.ts  app.ts  cli.ts  file-move.test.ts  file-move.ts  path-utils.test.ts  path-utils.ts  router.ts  server.ts  session.ts  smoke.test.ts  version.ts  web.ts
apps/web/src/handlers/: browse.ts  categorize-progress.ts  categorize.ts  models.ts  revert.ts  session.ts  thumbnail.ts  version.ts
models/holo-hoin/: .gitignore  README.md  build.sh  class_map.json  config.json  dataset.py  demo_gradio.py  eval_onnx.py  export_onnx.py  finetune.py  holo-hoin.onnx  holo-hoin.onnx.data  main.py  pyproject.toml  quantize_fp16.py  requirements.txt  train.py
models/holo-hoin/docs/: development.md  evaluation.md
models/holo-hoin/holo_hoin/: __init__.py  api.py  checkpoints.py  data.py  device.py  eval_onnx.py  export_onnx.py  finetune.py  loops.py  modeling.py  quantize_fp16.py  train.py
models/holo-hoin/tools/: monitor_training.sh
models/molu-hoin/: README.md  build.sh  class_map.json  config.json  molu-hoin.onnx
scripts/: build-models.sh  list-models.sh  model-release-readme-template.md  package-release-model.sh  release-readme-template.md  ruff-models.sh  web-release-readme-template.md  write-release-readme.sh  write-web-release-readme.sh
