[workspace]
members = [
  "apps/cli",
  "packages/metadata-schema",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/7591yj/hoin"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "tiff", "webp"] }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["copy-dylibs", "download-binaries", "tls-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.13"
walkdir = "2.5"
