[package]
name = "hoin-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[[bin]]
name = "hoin"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
metadata-schema = { path = "../../packages/metadata-schema" }
serde_json.workspace = true
