[project]
name = "holo-hoin"
version = "0.1.0"
description = "Hololive Talent inference using Swin Transformer-Tiny"
requires-python = ">=3.11,<3.15"
dependencies = [
    # Crawling
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "pillow>=10.0.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    # Training
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "triton-rocm==3.6.0 ; sys_platform == 'linux'",
    "timm>=0.9.12",
    "albumentations>=1.3.1",
    "numpy>=1.24.0",
    # Inference engine with the CPU execution provider included by default
    "onnxruntime>=1.17.0",
    "onnxscript>=0.6.2",
]

[project.optional-dependencies]
logging = ["wandb>=0.16.0"]
# Intel Arc training support; Python 3.14 is excluded because IPEX wheels are not published for it.
arc = [
    "intel-extension-for-pytorch>=2.3.0 ; python_version < '3.14'",
    "oneccl-bind-pt>=2.3.0 ; python_version < '3.14'",
]
# Use `onnxruntime-rocm` manually for ROCm ONNX validation; it conflicts with `onnxruntime`.

[tool.uv.sources]
torch = [
    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
triton-rocm = { index = "pytorch-rocm" }
# Intel Arc XPU packages resolve from the dedicated IPEX index.
intel-extension-for-pytorch = { index = "pytorch-ipex" }
oneccl-bind-pt = { index = "pytorch-ipex" }

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.1"
explicit = true

[[tool.uv.index]]
name = "pytorch-ipex"
url = "https://pytorch-extension.intel.com/release-whl/stable/xpu/us/"
explicit = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
